--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,15 +11,38 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: docker/setup-buildx-action@v2
-
       # TODO build, publish to docker hub, deploy to k8s
+      - uses: docker/setup-buildx-action@v2 
+      - name: Build images
+        timeout-minutes: 10
+        run: docker compose build
+      
+      - name: Publishing
+        timeout-minutes: 10
+        run: |
+          docker login -u shadowxtof -p ${{secrets.DOCKERHUB_PASSWORD}}
+          docker tag bmstu-semester_9-rsoi-lab4-flights shadowxtof/bmstu-semester_9-rsoi-lab4-flights
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-flights
+          docker tag bmstu-semester_9-rsoi-lab4-bonuses shadowxtof/bmstu-semester_9-rsoi-lab4-bonuses
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-bonuses
+          docker tag bmstu-semester_9-rsoi-lab4-tickets shadowxtof/bmstu-semester_9-rsoi-lab4-tickets
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-tickets
+          docker tag bmstu-semester_9-rsoi-lab4-gateway shadowxtof/bmstu-semester_9-rsoi-lab4-gateway
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-gateway
+
+      - name: Run containers
+        timeout-minutes: 5
+        run: |
+          docker compose up -d
+          ./scripts/wait-script.sh
+        env:
+          WAIT_PORTS: 8080,8070,8060,8050
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
-          collection: <variant>/postman/collection.json
-          environment: <variant>/postman/environment.json
+          collection: v1/postman/collection.json
+          environment: v1/postman/environment.json
           delayRequest: 100
           reporters: '[ "cli" ]'
 
