--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -11,7 +11,24 @@ jobs:
         with:
           fetch-depth: 0
 
+
+
       # TODO build, publish to docker hub, deploy to k8s
+      - name: UnitTests
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - run: |
+          docker compose up postgres -d
+          pip install -r requirements.txt
+          export DATABASE_URL="postgresql://program:test@localhost:5432/flights"
+          pytest app/FlightService/tests.py
+          export DATABASE_URL="postgresql://program:test@localhost:5432/tickets"
+          pytest app/TicketService/tests.py
+          export DATABASE_URL="postgresql://program:test@localhost:5432/privileges"
+          pytest app/BonusService/tests.py
+          docker compose down
+
       - uses: docker/setup-buildx-action@v2 
       - name: Build images
         timeout-minutes: 10
@@ -34,6 +51,8 @@ jobs:
         timeout-minutes: 5
         run: |
           docker compose up -d
+          chmod 777 ./scripts/wait-for.sh
+          chmod 777 ./scripts/wait-scripts.sh
           ./scripts/wait-script.sh
         env:
           WAIT_PORTS: 8080,8070,8060,8050
@@ -59,3 +78,8 @@ jobs:
           user_column: 'D'
           column_offset: 'F'
           mark: "'+"
+      
+      - name: Stop containers
+        if: always()
+        continue-on-error: true
+        run: docker compose down -v
