--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     build:
       dockerfile: ./app/FlightService/Dockerfile
       args:
-        database_url: "postgresql://program:test@postgres:5432/flights"
+        database_url: "postgresql://program:test@postgres-postgresql.default.svc.cluster.local:5432/flights"
     ports:
       - "8060:8060"
     networks:
@@ -46,7 +46,7 @@ services:
     build:
       dockerfile: ./app/BonusService/Dockerfile
       args:
-        database_url: "postgresql://program:test@postgres:5432/privileges"
+        database_url: "postgresql://program:test@postgres-postgresql.default.svc.cluster.local:5432/privileges"
     ports:
       - "8050:8050"
     networks:
@@ -61,7 +61,7 @@ services:
     build:
       dockerfile: ./app/TicketService/Dockerfile
       args:
-        database_url: "postgresql://program:test@postgres:5432/tickets"
+        database_url: "postgresql://program:test@postgres-postgresql.default.svc.cluster.local:5432/tickets"
     ports:
       - "8070:8070"
     networks:
