--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -24,6 +24,7 @@ jobs:
           chmod +x ./kubectl
           sudo mv ./kubectl /usr/local/bin/kubectl
           kubectl config use-context default --kubeconfig=test.kubeconfig
+          kubectl get services
           
           curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
           sudo apt-get install apt-transport-https --yes
