--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -16,21 +16,20 @@ jobs:
       # TODO build, publish to docker hub, deploy to k8s
       
       
+      - name: Set up k8s
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.28.0'
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: 'v3.16.4'
+
       - name: Publishing
         timeout-minutes: 10
         run: |
-          
-          curl -LO https://dl.k8s.io/release/`curl -LS https://dl.k8s.io/release/stable.txt`/bin/linux/amd64/kubectl
-          chmod +x ./kubectl
-          sudo mv ./kubectl /usr/local/bin/kubectl
           echo "${KUBE_CONFIG}" | base64 -d > ~/.kube/config
-          
-          curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
-          sudo apt-get install apt-transport-https --yes
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-          sudo apt-get update
-          sudo apt-get install helm
-
           helm uninstall flights
           helm install flights ./ticketbuy -f ./ticketbuy/values-flights.yaml
           helm uninstall bonuses
