--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -31,13 +31,14 @@ jobs:
         run: |
           mkdir -p ~/.kube
           echo "${KUBE_CONFIG}" | base64 -d > ~/.kube/config
-          helm uninstall flights
+          kubectl cluster-info
+          helm uninstall flights || true
           helm install flights ./ticketbuy -f ./ticketbuy/values-flights.yaml
-          helm uninstall bonuses
+          helm uninstall bonuses || true
           helm install bonuses ./ticketbuy -f ./ticketbuy/values-bonuses.yaml
-          helm uninstall tickets
+          helm uninstall tickets || true
           helm install tickets ./ticketbuy -f ./ticketbuy/values-tickets.yaml
-          helm uninstall gateway
+          helm uninstall gateway || true
           helm install gateway ./ticketbuy -f ./ticketbuy/values-gateway.yaml
 
           echo "84.201.149.237 ticketbuy.ru" >> /etc/hosts
