--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -35,6 +35,7 @@ jobs:
         env:
           YC_SERVICE_ACCOUNT_KEY: ${{ secrets.YC_SERVICE_ACCOUNT_KEY }}
         run: |
+          exec -l $SHELL
           source "/home/runner/.bashrc"
           echo "$YC_SERVICE_ACCOUNT_KEY" > key.json
           export SA_KEY_PATH=key.json
