--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Install Yandex Cloud CLI
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
-          exec -l $SHELL
+          echo "::add-path::${HOME}/yandex-cloud/bin"
+          echo "Yandex Cloud CLI installed and added to PATH"
 
       - name: Publishing
         timeout-minutes: 10
