--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Yandex Cloud CLI
         run: |
           curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash
-          source "/home/runner/.bashrc"
+          echo "${HOME}/yandex-cloud/bin" >> $GITHUB_PATH
           echo "Yandex Cloud CLI installed and added to PATH"
 
       - name: Publishing
