--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -38,9 +38,10 @@ jobs:
           YC_SERVICE_ACCOUNT_KEY: ${{ secrets.YC_SERVICE_ACCOUNT_KEY }}
         run: |
           
-          echo "$YC_SERVICE_ACCOUNT_KEY" > key.json
-          export SA_KEY_PATH=key.json
-          yc init --sa-key $SA_KEY_PATH --cloud-id=b1gdqrp33ldf7poictmn --folder-id=b1g6gpph4cgrsecjdlci
+          echo "$YC_SERVICE_ACCOUNT_KEY" > sa-key.json
+          export YC_SERVICE_ACCOUNT_KEY_FILE=sa-key.json
+          yc config set cloud-id b1gdqrp33ldf7poictmn
+          yc config set folder-id b1g6gpph4cgrsecjdlci
           yc managed-kubernetes cluster get-credentials catdnvpbp6b4j68mbgd1 --external --force > ~/.kube/config
           kubectl cluster-info --kubeconfig ~/.kube/config
 
