--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -42,6 +42,7 @@ jobs:
           export YC_SERVICE_ACCOUNT_KEY_FILE=sa-key.json
           yc config set cloud-id b1gdqrp33ldf7poictmn
           yc config set folder-id b1g6gpph4cgrsecjdlci
+          mkdir -p ~/.kube
           yc managed-kubernetes cluster get-credentials catdnvpbp6b4j68mbgd1 --external --force > ~/.kube/config
           kubectl cluster-info --kubeconfig ~/.kube/config
 
