--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,7 +14,25 @@ jobs:
 
 
       # TODO build, publish to docker hub, deploy to k8s
-      
+      - name: UnitTests
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - run: |
+          docker compose up postgres -d
+          pip install -r requirements.txt
+          export DATABASE_URL="postgresql://program:test@localhost:5432/flights"
+          pytest app/FlightService/tests.py
+          export DATABASE_URL="postgresql://program:test@localhost:5432/tickets"
+          pytest app/TicketService/tests.py
+          export DATABASE_URL="postgresql://program:test@localhost:5432/privileges"
+          pytest app/BonusService/tests.py
+          docker compose down
+
+      - uses: docker/setup-buildx-action@v2 
+      - name: Build images
+        timeout-minutes: 10
+        run: docker compose build
       
       - name: Set up k8s
         uses: azure/setup-kubectl@v3
@@ -37,6 +55,15 @@ jobs:
         env:
           YC_SERVICE_ACCOUNT_KEY: ${{ secrets.YC_SERVICE_ACCOUNT_KEY }}
         run: |
+          docker login -u shadowxtof -p ${{secrets.DOCKERHUB_PASSWORD}}
+          docker tag bmstu-semester_9-rsoi-lab4-flights shadowxtof/bmstu-semester_9-rsoi-lab4-flights
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-flights
+          docker tag bmstu-semester_9-rsoi-lab4-bonuses shadowxtof/bmstu-semester_9-rsoi-lab4-bonuses
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-bonuses
+          docker tag bmstu-semester_9-rsoi-lab4-tickets shadowxtof/bmstu-semester_9-rsoi-lab4-tickets
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-tickets
+          docker tag bmstu-semester_9-rsoi-lab4-gateway shadowxtof/bmstu-semester_9-rsoi-lab4-gateway
+          docker push shadowxtof/bmstu-semester_9-rsoi-lab4-gateway
           
           echo "$YC_SERVICE_ACCOUNT_KEY" > sa-key.json
           export YC_SERVICE_ACCOUNT_KEY_FILE=sa-key.json
